@@ -1,3 +1,7 @@
+# Copyright: (C) 2010 RobotCub Consortium
+# Authors: Paul Fitzpatrick
+# CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
+
 MACRO(WDK_SETUP WDK_BUILD WDK_TEMPLATE)
   set(WDK_SOURCE_LIST_RAW)
   set(WDK_INCLUDE_LIST_RAW)
