@@ -1,3 +1,10 @@
+
+/*
+ * Copyright: (C) 2011 RobotCub Consortium
+ * Author: Paul Fitzpatrick
+ * CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT
+ */
+
 #include <stdio.h>
 #include <yarp/os/all.h>
 
