@@ -1,3 +1,7 @@
+2011-05-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* conf/YarpVersion.cmake: bump to version 2.3.4
+
 2011-05-26  Marco Randazzo    <marco.randazzo@iit.it>
 	
 	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
